java 1.5 usage, plus using remove of itgerator, rather then using remove on the iterated collection (that could give undefined results)
git-svn-id: https://scm.mmbase.org/mmbase/trunk@22203 91430c5f-d668-0410-9e7d-dd663366dcfd